--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Old Standard TT", serif;
+  color: #212121;
+}
+
+a {
+  font-family: "Bebas Neue", sans-serif;
+}
